--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 </ul>
             </div>
             <div class="col-7">
-                <div class="row">
+                <!-- <div class="row"> -->
                     <div class="card">
                         <div class="card-body">
                             <h2 class="card-title">City Name  <span id="currentDay" class="lead"></span></h2>                          
@@ -46,7 +46,7 @@
                         </div>
                     </div>
                     
-                </div>
+                <!-- </div> -->
                 <div class="row">
                     <div id="forecast">
                         <div>
