--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
             <div class="col-4">
                 <h1>Search for a city</h1>
                 <div class="input-group mb-3">
-                    <input type="text" class="form-control" placeholder="Recipient's username"
+                    <input id="city-input" type="text" class="form-control" placeholder="Enter a City"
                         aria-label="Recipient's username" aria-describedby="basic-addon2">
                     <div class="input-group-append">
-                        <span class="input-group-text" id="basic-addon2"><i class="material-icons">search</i></span>
+                        <button class="input-group-text" id="basic-addon2"><i class="material-icons">search</i></button>
                     </div>
                 </div>
                 <ul class="list-group" id="city-list">
@@ -39,10 +39,10 @@
                 <div class="card">
                     <div class="card-body">
                         <h2 class="card-title">City Name  <span id="currentDay" class="lead"></span></h2>                          
-                        <p class="card-text">Temperature: </p>
-                        <p class="card-text">Humidity: </p>
-                        <p class="card-text">Wind Speed: </p>
-                        <p class="card-text">UV Index: </p>
+                        <p class="card-text">Temperature: <sapn id="tep"></sapn> </p>
+                        <p class="card-text">Humidity: <span id="hum"></span></p>
+                        <p class="card-text">Wind Speed: <span id="wp"></span></p>
+                        <p class="card-text">UV Index: <span id="uv"></span></p>
                     </div>
                 </div>
                     
