--- a/index.html
+++ b/index.html
@@ -22,10 +22,9 @@
                 <h1>Search for a city</h1>
                 <div class="input-group mb-3">
                     <input id="city-input" type="text" class="form-control" placeholder="Enter a City"
-                        aria-label="Recipient's username" aria-describedby="basic-addon2">
-                    <div class="input-group-append">
-                        <button class="input-group-text" id="basic-addon2"><i class="material-icons">search</i></button>
-                    </div>
+                        aria-label="Recipient's username" aria-describedby="basic-addon2">               
+                    <button class="btn btn-primary" type="button" id="search"><i class="material-icons">search</i></button>
+                    
                 </div>
                 <ul class="list-group" id="city-list">
                     <!-- <li class="list-group-item">Cras justo odio</li>
