--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </div>
     <div class="container-fluid">
         <div class="row">
-            <div class="col-3">
+            <div class="col-lg-3 col-sm-12 col-md-12">
                 <h1>Search for a city</h1>
                 <div class="input-group mb-3">
                     <input id="city-input" type="text" class="form-control" placeholder="Enter a City"
@@ -35,7 +35,7 @@
                 </ul>
             </div>
             <div class="col-2"></div>
-            <div class="col">
+            <div class="col-lg-7 col-md-12 col-sm-12">
                 <div class="card">
                     <div class="card-body">
                         <div class="card-title">
